--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,15 @@ body {
   margin: auto;
   width: 95%; }
 
+@media screen and (min-width: 768px) {
+  .stepped-wrap {
+    max-width: 768px; } }
+@media screen and (min-width: 992px) {
+  .stepped-wrap {
+    max-width: 992px; } }
+@media screen and (min-width: 1200px) {
+  .stepped-wrap {
+    max-width: 1200px; } }
 /************************
  * HEADER STYLES
  * LOGO AND NAV MENU
@@ -89,6 +98,25 @@ body {
     position: absolute;
     top: 0;
     right: 0; } }
+/********************
+  HEADER STYLES
+  SEARCH FORM
+*********************/
+#sewchic_home_search {
+  margin: 20px 0; }
+  #sewchic_home_search input, #sewchic_home_search label, #sewchic_home_search button {
+    margin: 5px 0; }
+  #sewchic_home_search input {
+    height: auto; }
+
+@media screen and (min-width: 768px) {
+  #sewchic_home_search input, #sewchic_home_search label, #sewchic_home_search button {
+    margin: 0 10px; }
+  #sewchic_home_search label {
+    position: relative;
+    top: 4px; }
+  #sewchic_home_search input {
+    width: 250px; } }
 /*********************
   HOME PAGE STYLES
 *********************/
@@ -97,18 +125,11 @@ body {
   border-bottom: 50px solid #fbdedd; }
 
 .sewchic-hero-body {
-  padding: 20px 0; }
-
-#sewchic-carousel-height-block {
-  height: 600px;
-  position: relative; }
-
-.sewchic-carousel-outer-wrapper {
-  width: 100%;
-  padding: 30px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%); }
+  padding: 20px 0;
+  background-image: none;
+  background-position: center top;
+  background-size: contain;
+  background-repeat: no-repeat; }
 
 .sewchic-carousel-item {
   text-align: center; }
@@ -124,20 +145,6 @@ body {
 
 .sewchic-cell {
   display: table-cell; }
-
-#sewchic-home-tower-container {
-  display: none; }
-
-#sewchic-home-tower-img {
-  max-width: 100%;
-  height: auto; }
-
-#sewchic-home-search {
-  margin: 20px 0; }
-  #sewchic-home-search input, #sewchic-home-search label, #sewchic-home-search button {
-    margin: 5px 0; }
-  #sewchic-home-search input {
-    height: auto; }
 
 .sewchic-home-menu-title {
   text-decoration: underline;
@@ -195,9 +202,6 @@ body {
   .sewchic-navbar-toggle {
     display: none; }
 
-  .sewchic-carousel-outer-wrapper {
-    padding: 50px; }
-
   #sewchic_primary_menu {
     display: block !important;
     padding: 0; }
@@ -226,14 +230,6 @@ body {
     font-size: 24px;
     font-weight: bold; }
 
-  #sewchic-home-search input, #sewchic-home-search label, #sewchic-home-search button {
-    margin: 0 10px; }
-  #sewchic-home-search label {
-    position: relative;
-    top: 4px; }
-  #sewchic-home-search input {
-    width: 250px; }
-
   .sewchic-home-post.sewchic-home-post-small:first-of-type {
     margin-top: 0px; } }
 @media screen and (min-width: 992px) {
@@ -255,9 +251,6 @@ body {
     display: table-cell;
     width: 33.3%; } }
 @media screen and (min-width: 1200px) {
-  #sewchic-carousel-height-block {
-    height: 725px; }
-
   #sewchic-home-tower-img {
     margin-top: -75px;
     height: 800px; } }
