--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,21 +1,5 @@
 /* This is the theme's principal scss stylesheet */
 /*this is the colors stylesheet*/
-/* styles in bootstrap that I'm overriding and changing for the purposes of this theme */
-/* Facebook page plugin responsive styles */
-.sewchic-facebook-page-plugin-widget {
-  position: relative;
-  height: 0;
-  padding-top: 30px;
-  width: 100%;
-  overflow: hidden;
-  /* max-width and padding-bottom rendered in php */ }
-  .sewchic-facebook-page-plugin-widget iframe {
-    height: 100% !important;
-    width: 100% !important;
-    top: 0;
-    left: 0;
-    position: absolute; }
-
 /************************
  * GENERAL STYLES
  * 
@@ -34,6 +18,15 @@ body {
 .wrap {
   margin: auto;
   width: 95%; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
+
+.text-left {
+  text-align: left; }
 
 @media screen and (min-width: 768px) {
   .stepped-wrap {
@@ -91,13 +84,54 @@ body {
     padding: 0 0 0 20px;
     list-style-type: none; }
 
+@media screen and (min-width: 768px) {
+  .sewchic-header-widget-container h3 {
+    margin: 3px auto; }
+
+  #sewchic_primary_menu {
+    display: block !important;
+    padding: 0; }
+    #sewchic_primary_menu a {
+      padding: 5px 8px; }
+    #sewchic_primary_menu li.menu-item {
+      display: inline-block;
+      margin-right: 10px;
+      position: relative; }
+      #sewchic_primary_menu li.menu-item ul.sub-menu {
+        display: block;
+        position: absolute;
+        left: -99999px; }
+      #sewchic_primary_menu li.menu-item:hover {
+        background: #eee; }
+      #sewchic_primary_menu li.menu-item:hover a {
+        text-decoration: none; }
+      #sewchic_primary_menu li.menu-item:hover ul.sub-menu {
+        left: 0px;
+        background: #fbdedd;
+        margin: -5px 0 0 0;
+        padding: 10px;
+        z-index: 10; } }
 @media screen and (min-width: 992px) {
   .sewchic-account-links {
     max-width: 250px;
     text-align: right;
     position: absolute;
     top: 0;
-    right: 0; } }
+    right: 0; }
+
+  .sewchic-header-widget-container {
+    text-align: left; }
+    .sewchic-header-widget-container .sewchic-header-widget-element {
+      position: absolute;
+      bottom: 0;
+      right: 0; }
+    .sewchic-header-widget-container h3 {
+      margin: 3px 0 0 0;
+      padding-bottom: 15px; }
+
+  #sewchic_primary_menu {
+    font-size: 24px;
+    font-weight: bold; } }
 /********************
   HEADER STYLES
   SEARCH FORM
@@ -109,6 +143,9 @@ body {
   #sewchic_home_search input {
     height: auto; }
 
+@media screen and (max-width: 768px) {
+  #sewchic_home_search input {
+    padding: 6px 0; } }
 @media screen and (min-width: 768px) {
   #sewchic_home_search input, #sewchic_home_search label, #sewchic_home_search button {
     margin: 0 10px; }
@@ -196,35 +233,8 @@ body {
     color: #aeaeae; }
 
 @media screen and (min-width: 768px) {
-  .sewchic-header-widget-container h3 {
-    margin: 3px auto; }
-
   .sewchic-navbar-toggle {
     display: none; }
-
-  #sewchic_primary_menu {
-    display: block !important;
-    padding: 0; }
-    #sewchic_primary_menu a {
-      padding: 5px 8px; }
-    #sewchic_primary_menu li.menu-item {
-      display: inline-block;
-      margin-right: 10px;
-      position: relative; }
-      #sewchic_primary_menu li.menu-item ul.sub-menu {
-        display: block;
-        position: absolute;
-        left: -99999px; }
-      #sewchic_primary_menu li.menu-item:hover {
-        background: #eee; }
-      #sewchic_primary_menu li.menu-item:hover a {
-        text-decoration: none; }
-      #sewchic_primary_menu li.menu-item:hover ul.sub-menu {
-        left: 0px;
-        background: #fbdedd;
-        margin: -5px 0 0 0;
-        padding: 10px;
-        z-index: 10; }
 
   .big-text-sm {
     font-size: 24px;
@@ -233,20 +243,6 @@ body {
   .sewchic-home-post.sewchic-home-post-small:first-of-type {
     margin-top: 0px; } }
 @media screen and (min-width: 992px) {
-  #sewchic_primary_menu {
-    font-size: 24px;
-    font-weight: bold; }
-
-  .sewchic-header-widget-container {
-    text-align: left; }
-    .sewchic-header-widget-container .sewchic-header-widget-element {
-      position: absolute;
-      bottom: 0;
-      right: 0; }
-    .sewchic-header-widget-container h3 {
-      margin: 3px 0 0 0;
-      padding-bottom: 15px; }
-
   #sewchic-home-tower-container {
     display: table-cell;
     width: 33.3%; } }
