--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -82,7 +82,7 @@ span.required{
     word-wrap: normal!important;
 }
 
-a.button, input.button, input.submit, button.button, input[type="submit"]{
+a.button, input.button, input.submit, button.button, input[type="submit"], button[type="submit"]{
     background-color: $lighter-grey;
     border: 1px solid $light-grey;
     color:$black;
@@ -135,7 +135,7 @@ button.wcsc-toggle.button{
 
 .input-text, select.orderby, input.search-field{
     width:100%;
-    height:39px;
+    //height:39px;
     padding:6px 12px;
     font-size:16px;
     line-height:1em;
