--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -88,7 +88,8 @@ button.wcsc-toggle.button {
 
 .input-text, select.orderby, input.search-field {
   width: 100%;
-  padding: 6px 12px;
+  padding: 10px 12px 8px;
+  box-sizing: border-box;
   font-size: 16px;
   line-height: 1em;
   background-color: white;
@@ -740,7 +741,7 @@ ul.products {
     padding-right: 10px;
     min-width: 205px; }
   .wcsc-shop-container #filter_widgets_bin {
-    display: block;
+    display: block !important;
     text-align: left; }
     .wcsc-shop-container #filter_widgets_bin .price_slider_wrapper {
       width: 80%; } }
@@ -767,14 +768,22 @@ nav.woocommerce-MyAccount-navigation ul {
     margin: 20px 0; }
     nav.woocommerce-MyAccount-navigation ul li {
       display: inline-block;
-      margin-right: 10px; }
+      margin-right: 7px; }
+      nav.woocommerce-MyAccount-navigation ul li:last-of-type {
+        margin-right: 0; }
       nav.woocommerce-MyAccount-navigation ul li a {
         display: initial;
-        margin: 0; } }
-@media screen and (min-width: 992px) {
+        margin: 0; }
+
   /*login*/
   .woocommerce-form-login {
     max-width: 500px; } }
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  nav.woocommerce-MyAccount-navigation ul li a {
+    padding: 6px; } }
+@media screen and (min-width: 992px) {
+  nav.woocommerce-MyAccount-navigation ul li {
+    margin-right: 10px; } }
 /*Woocommerce widgets*/
 .wcsc-sidebar ul {
   list-style-type: none;
