Complete front page contents

--- a/assets/css/sass/_header_logo_nav.scss
+++ b/assets/css/sass/_header_logo_nav.scss
@@ -58,6 +58,11 @@
     }
 }
 @media screen and (min-width:768px){
+    
+    .sewchic-navbar-toggle{
+        display:none;
+    }
+
     .sewchic-header-widget-container{
         h3{
             margin: 3px auto;
