--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -96,8 +96,17 @@
         .sewchic-home-post-category-title{
             margin:0;
             padding: 10px;
-            color: $black;
+            color: $white;
             font-size:30px;
+            -webkit-text-stroke: 1px $black;
+            text-shadow:
+                2px 2px $black,
+                1px 1px $black,
+                1px -1px $black,
+                -1px 1px $black,
+                -1px -1px $black
+            ;
+
              
         }
         .sewchic-home-button-text{
