--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -204,6 +204,8 @@ table.shop_attributes {
     line-height: 0;
     visibility: hidden; } }
 /*end generics and overrides*/
+/*Photoswipe default overrides*/
+/*End photoswipe default overrides*/
 /*cart page styles*/
 .cart_totals > table.shop_table tr > th, table.shop_table.cart tr > th {
   display: none; }
@@ -780,7 +782,8 @@ nav.woocommerce-MyAccount-navigation ul {
     max-width: 500px; } }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   nav.woocommerce-MyAccount-navigation ul li a {
-    padding: 6px; } }
+    padding: 6px;
+    font-size: 14px; } }
 @media screen and (min-width: 992px) {
   nav.woocommerce-MyAccount-navigation ul li {
     margin-right: 10px; } }
