--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
  */
 
 @import url('assets/css/woocommerce.css');
+@import url('assets/css/photoswipe-skin-overrides.css');
 @import url('assets/css/single.css');
 @import url('assets/css/archive.css');
 @import url('assets/css/main.css');
