--- a/assets/css/sass/_forms.scss
+++ b/assets/css/sass/_forms.scss
@@ -125,8 +125,8 @@ button.wcsc-toggle.button{
         }
     }
 
-    .sewchic-form{
-        //nothing needed
+    .sewchic-form.limited-width{
+        max-width:500px;
     }
 
     button.wcsc-toggle.button{
